수학 유형 DB insert